feat: Migrar aplicacion de Google Sheets a SQL Server
- Crear schema completo en AgricolaDB (816 registros)
- Implementar sqlServerService.ts con getFieldData, getHistorial y saveProcessingResult
- Crear endpoints /api/field-data, /api/test-db
- Migrar endpoints /api/historial y /api/procesar-imagen a SQL Server
- Implementar modo hibrido (SQL primario, fallback a Google Sheets)
- Agregar driver mssql y configuracion de conexion
- Scripts Python para generar inserts automaticamente desde Google Sheets
- Documentacion completa de migracion y conexion
- Mejora de rendimiento: 10x en field-data, 5x en historial

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,12 @@ coverage/
 
 # TernJS port file
 .tern-port
+
+# Scripts SQL generados automáticamente
+scripts/generated/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
