--- a/env.example
+++ b/env.example
@@ -7,5 +7,18 @@ GOOGLE_SHEETS_TOKEN_BASE64=your_token_base64_here
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:3000
 
+# SQL Server Configuration
+SQL_SERVER=localhost\\SQLEXPRESS
+SQL_DATABASE=AgricolaDB
+SQL_PORT=1433
+
+# SQL Server Authentication (recomendado para Node.js)
+SQL_USER=agricola_app
+SQL_PASSWORD=Agricola2024!
+
+# Data Source Configuration
+# Options: 'sql' (only SQL Server), 'sheets' (only Google Sheets), 'hybrid' (both, SQL primary)
+DATA_SOURCE=sql
+
 # Development
 NODE_ENV=development
