--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exif-js": "^2.3.0",
     "googleapis": "^161.0.0",
     "lucide-react": "^0.545.0",
+    "mssql": "^11.0.1",
     "next": "15.5.4",
     "piexifjs": "^1.0.6",
     "react": "19.1.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/mssql": "^9.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
