chore: Limpiar archivos innecesarios y mejorar .gitignore - Eliminar archivos de documentacion de sesion (*.md temporales) - Eliminar scripts Python y PowerShell ya ejecutados - Eliminar endpoint viejo de google-sheets - Agregar patrones al gitignore para archivos temporales

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,14 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
+
+# Archivos temporales de sesión
+*_SESION.md
+CONEXION*.md
+MIGRACION*.md
+PLAN_*.md
+RESUMEN_*.md
+SOLUCION_*.md
+ESTADO_*.md
+HABILITAR_*.md
+INSTALACION_*.md
