feat: MigraciÃ³n completa a SQL Server AgroMigiva
- MigraciÃ³n de BD local a SQL Server empresarial AgroMigiva
- Eliminadas credenciales hardcodeadas, ahora usa variables de entorno
- Actualizado cÃ³digo para usar tablas GROWER.* y MAST.*
- Creado script SQL para tabla IMAGE.ANALISIS_IMAGEN
- Generado catÃ¡logo automÃ¡tico de schemas con script Python
- Limpieza de archivos obsoletos y documentaciÃ³n antigua
- Actualizado README.md con informaciÃ³n de SQL Server
- Agregado script Python para catalogar schemas automÃ¡ticamente

Archivos eliminados:
- Scripts SQL obsoletos de BD local
- DocumentaciÃ³n temporal de migraciÃ³n
- QUICK_START.md (desactualizado)

Archivos nuevos:
- CATALOGO_SCHEMAS_TABLAS.md (catÃ¡logo completo de tablas)
- scripts/catalogar_schemas.py (script automÃ¡tico)
- scripts/create_table_analisis_imagen_agromigiva.sql
- docs/ESTRUCTURA_BD_PRODUCCION.md

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ credentials.json
 google-credentials.json
 google-token.json
 
+# SQL Server credentials (AGROMIGIVA)
+credenciales_sql_server_agromigiva.txt
+*credenciales*.txt
+*credentials*.txt
+
 # IDE
 .vscode/
 .idea/
