--- a/env.example
+++ b/env.example
@@ -8,13 +8,16 @@ GOOGLE_SHEETS_TOKEN_BASE64=your_token_base64_here
 NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # SQL Server Configuration
-SQL_SERVER=localhost\\SQLEXPRESS
-SQL_DATABASE=AgricolaDB
+# IMPORTANTE: Configurar estas variables en .env.local (NO commitear .env.local)
+SQL_SERVER=your_server_ip_or_hostname
+SQL_DATABASE=your_database_name
 SQL_PORT=1433
+SQL_ENCRYPT=true
 
-# SQL Server Authentication (recomendado para Node.js)
-SQL_USER=agricola_app
-SQL_PASSWORD=Agricola2024!
+# SQL Server Authentication
+# Para servidor AgroMigiva: usar ucown_powerbi_desa para escritura, ucser_powerbi_desa para lectura
+SQL_USER=your_sql_user
+SQL_PASSWORD=your_sql_password
 
 # Data Source Configuration
 # Options: 'sql' (only SQL Server), 'sheets' (only Google Sheets), 'hybrid' (both, SQL primary)
