fix: CorrecciÃ³n de queries SQL y configuraciÃ³n para usar base de datos AgroMigiva
- Corregido JOIN en getFieldData: usar s.growerID en lugar de f.growerID (GROWER.FARMS no tiene growerID)
- Corregida bÃºsqueda de fundo en saveProcessingResult usando JOIN con GROWER.STAGE
- Cambiado schema de IMAGE a image (minÃºsculas) para consistencia
- Renombrada tabla ANALISIS_IMAGEN a Analisis_Imagen
- Configurado uso de URLs relativas en lugar de absolutas (funciona en cualquier puerto)
- Agregados logs de debug detallados para troubleshooting
- Optimizado endpoint field-data con headers de cache
- Aumentado timeout de axios a 120s para respuestas grandes
- Mejorado script start-dev.bat para limpiar procesos anteriores automÃ¡ticamente
- Actualizado env.example con instrucciones claras

--- a/env.example
+++ b/env.example
@@ -5,7 +5,9 @@ GOOGLE_SHEETS_CREDENTIALS_BASE64=your_credentials_base64_here
 GOOGLE_SHEETS_TOKEN_BASE64=your_token_base64_here
 
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3000
+# Dejar vacío para usar URLs relativas (funciona en cualquier puerto)
+# Solo configurar si necesitas una URL absoluta específica
+NEXT_PUBLIC_API_URL=
 
 # SQL Server Configuration
 # IMPORTANTE: Configurar estas variables en .env.local (NO commitear .env.local)
