feat: Sistema de alertas completo y depuración de Resend
- Depuración completa de Resend (eliminado de Next.js)
- Sistema de alertas implementado:
  * Tablas: LoteEvaluacion, Alerta, Mensaje, Contacto, UmbralLuz
  * Stored Procedure: sp_CalcularLoteEvaluacion
  * Trigger: trg_LoteEvaluacion_Alerta
  * Servicio de alertas (alertService.ts)
  * API endpoint: /api/alertas/procesar-mensajes
- Reorganización de scripts SQL por categorías
- Documentación completa del sistema
- Preparación para Worker Service (.NET):
  * Next.js solo crea mensajes en image.Mensaje
  * Worker Service se encargará del envío de emails
- Filtrado de contactos por fundoID y sectorID
- Eliminada dependencia de Resend de package.json
- Actualizado env.example con notas sobre Worker Service

--- a/env.example
+++ b/env.example
@@ -25,5 +25,11 @@ SQL_PASSWORD=your_sql_password
 # Options: 'sql' (only SQL Server), 'sheets' (only Google Sheets), 'hybrid' (both, SQL primary)
 DATA_SOURCE=sql
 
+# Destinatarios de Alertas (JSON array) - FALLBACK si no hay contactos en image.Contacto
+# NOTA: El envío de emails se realiza mediante un Worker Service en .NET, no desde Next.js
+ALERTAS_EMAIL_DESTINATARIOS=["admin@example.com", "agronomo@example.com"]
+ALERTAS_EMAIL_CC=["manager@example.com"]
+# ALERTAS_EMAIL_BCC=["backup@example.com"]
+
 # Development
 NODE_ENV=development
