--- a/backend/package.json
+++ b/backend/package.json
@@ -7,33 +7,37 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "test": "ts-node src/test-server.ts",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["agricola", "api", "express", "sql-server"],
+  "keywords": [
+    "agricola",
+    "api",
+    "express",
+    "sql-server"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "mssql": "^11.0.1",
+    "axios": "^1.13.2",
     "canvas": "^3.2.0",
-    "@tensorflow/tfjs-node": "^4.22.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "googleapis": "^161.0.0",
+    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
-    "axios": "^1.12.2",
     "piexifjs": "^1.0.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.0",
-    "@types/multer": "^1.4.11",
+    "@types/express": "^4.17.21",
     "@types/mssql": "^9.1.5",
-    "typescript": "^5.3.3",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2"
+    "typescript": "^5.3.3"
   }
 }
-
