--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,8 @@
     "sourceMap": true,
     "types": ["node"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "exclude": ["node_modules", "dist"],
+  "typeRoots": ["./node_modules/@types", "./src/types"]
 }
 
