--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
+    "@esbuild/win32-x64": "^0.25.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "esbuild": "^0.25.12",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
@@ -35,4 +37,3 @@
     "vite": "^5.4.6"
   }
 }
-
