chore: actualizar dependencias y configuraciÃ³n
- Actualizar package.json y package-lock.json (backend y frontend)
- Actualizar env.example con nuevas variables de configuraciÃ³n

--- a/env.example
+++ b/env.example
@@ -31,5 +31,13 @@ ALERTAS_EMAIL_DESTINATARIOS=["admin@example.com", "agronomo@example.com"]
 ALERTAS_EMAIL_CC=["manager@example.com"]
 # ALERTAS_EMAIL_BCC=["backup@example.com"]
 
+# JWT Authentication (para integración con AgriQR)
+# Secret key para firmar tokens JWT - CAMBIAR EN PRODUCCIÓN
+JWT_SECRET=your-super-secret-key-change-in-production
+
+# NOTA: Las API Keys ahora se guardan en SQL Server (tabla image.Dispositivo)
+# Ya NO es necesario configurar VALID_API_KEYS aquí
+# Las apiKeys se gestionan desde la base de datos
+
 # Development
 NODE_ENV=development
