--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "ts-node src/test-server.ts",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
@@ -20,24 +20,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "googleapis": "^161.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "piexifjs": "^1.0.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mssql": "^9.1.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
+    "eslint": "^9.39.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.46.4"
   }
 }
