DepuraciÃ³n: Eliminar archivos obsoletos y actualizar configuraciÃ³n Resend
- Eliminados 29 archivos MD obsoletos (VPN, DNS Resend, planificaciones completadas)
- Actualizada configuraciÃ³n Resend con nueva API key y dominio updates.agricolaandrea.com
- Agregados endpoints de consolidaciÃ³n y envÃ­o de alertas
- Agregado servicio Resend para envÃ­o de emails
- Agregada documentaciÃ³n esencial para IT (Web Service, SOAP)
- Actualizado env.example con nueva configuraciÃ³n Resend

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
-    "piexifjs": "^1.0.6"
+    "piexifjs": "^1.0.6",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
