--- a/env.example
+++ b/env.example
@@ -25,8 +25,17 @@ SQL_PASSWORD=your_sql_password
 # Options: 'sql' (only SQL Server), 'sheets' (only Google Sheets), 'hybrid' (both, SQL primary)
 DATA_SOURCE=sql
 
+# Resend API Configuration
+# API Key de Resend (obtener desde https://resend.com/api-keys)
+RESEND_API_KEY=re_tu_api_key_aqui
+# Email desde el cual se envían las alertas (debe estar verificado en Resend)
+# Dominio: updates.agricolaandrea.com
+RESEND_FROM_EMAIL=no-reply@updates.agricolaandrea.com
+# Nombre que aparece como remitente
+RESEND_FROM_NAME=Sistema de Alertas LuzSombra
+
 # Destinatarios de Alertas (JSON array) - FALLBACK si no hay contactos en image.Contacto
-# NOTA: El envío de emails se realiza mediante un Worker Service en .NET, no desde Next.js
+# NOTA: Si hay contactos en image.Contacto, se usan esos. Esta variable solo se usa como fallback.
 ALERTAS_EMAIL_DESTINATARIOS=["admin@example.com", "agronomo@example.com"]
 ALERTAS_EMAIL_CC=["manager@example.com"]
 # ALERTAS_EMAIL_BCC=["backup@example.com"]
