Limpiar y actualizar configuraciÃ³n de entorno
- Limpiado env.example: eliminadas variables de Google Sheets obsoletas
- Agregadas PORT y FRONTEND_URL a env.example
- Agregado *.PublishSettings.txt al .gitignore (contiene credenciales)
- Creado ENV_STRATEGY.md explicando estrategia de .env.local
- Creado CHECKLIST_DEPLOY_AZURE.md con checklist completo para deploy

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ INSTALACION_*.md
 # Documentación y scripts SQL
 docs/
 scripts/
+
+# Azure Publish Settings (contiene credenciales)
+*.PublishSettings.txt
+*.publishsettings
