--- a/env.example
+++ b/env.example
@@ -1,14 +1,3 @@
-# Google Sheets Configuration
-GOOGLE_SHEETS_SPREADSHEET_ID=your_spreadsheet_id_here
-GOOGLE_SHEETS_SHEET_NAME=Data-app
-GOOGLE_SHEETS_CREDENTIALS_BASE64=your_credentials_base64_here
-GOOGLE_SHEETS_TOKEN_BASE64=your_token_base64_here
-
-# API Configuration
-# Dejar vacío para usar URLs relativas (funciona en cualquier puerto)
-# Solo configurar si necesitas una URL absoluta específica
-NEXT_PUBLIC_API_URL=
-
 # SQL Server Configuration
 # IMPORTANTE: Configurar estas variables en .env.local (NO commitear .env.local)
 SQL_SERVER=your_server_ip_or_hostname
@@ -22,7 +11,7 @@ SQL_USER=your_sql_user
 SQL_PASSWORD=your_sql_password
 
 # Data Source Configuration
-# Options: 'sql' (only SQL Server), 'sheets' (only Google Sheets), 'hybrid' (both, SQL primary)
+# Options: 'sql' (only SQL Server)
 DATA_SOURCE=sql
 
 # Resend API Configuration
@@ -47,6 +36,10 @@ JWT_SECRET=your-super-secret-key-change-in-production
 # NOTA: Las API Keys ahora se guardan en SQL Server (tabla image.Dispositivo)
 # Ya NO es necesario configurar VALID_API_KEYS aquí
 # Las apiKeys se gestionan desde la base de datos
+
+# Server Configuration
+PORT=3001
+FRONTEND_URL=http://localhost:3000
 
 # Development
 NODE_ENV=development
