fix: Actualizar workflow para usar branch master y agregar guÃ­a de deploy

--- a/.github/workflows/deploy-backend-azure.yml
+++ b/.github/workflows/deploy-backend-azure.yml
@@ -3,6 +3,7 @@ name: Deploy Backend to Azure App Service
 on:
   push:
     branches:
+      - master
       - main
     paths:
       - 'backend/**'
