--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ scripts/
 # Azure Publish Settings (contiene credenciales)
 *.PublishSettings.txt
 *.publishsettings
+
+# Vercel (no se usa)
+.vercel/
+vercel.json
