--- a/.github/workflows/master_agromigiva-luzysombra.yml
+++ b/.github/workflows/master_agromigiva-luzysombra.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          npm ci
+          npm install
           npm run build
         # No configurar VITE_API_URL - usar rutas relativas (mismo dominio)
         # En desarrollo: usar VITE_API_URL=http://localhost:3001 en .env.local
