--- a/env.example
+++ b/env.example
@@ -6,9 +6,10 @@ SQL_PORT=1433
 SQL_ENCRYPT=true
 
 # SQL Server Authentication
-# Para servidor AgroMigiva: usar ucown_powerbi_desa para escritura, ucser_powerbi_desa para lectura
-SQL_USER=your_sql_user
-SQL_PASSWORD=your_sql_password
+# Usuario para aplicación LuzSombra (DESA y PROD)
+# Usuario: ucser_luzsombra_desa (DESA) / ucser_luzSombra (PROD)
+SQL_USER=ucser_luzsombra_desa
+SQL_PASSWORD=D3s4S3r12
 
 # Data Source Configuration
 # Options: 'sql' (only SQL Server)
