--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "exif-js": "^2.3.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-crop": "^11.0.10",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
