chore: Depurar archivos obsoletos y actualizar configuracion - Eliminados: docs obsoletos (Joysense, DbSchema), scripts de prueba, guias duplicadas - Movidos: Reglas de Tablas.txt -> docs/ESTANDARES_CODIFICACION_BD_MIGIVA.md, EXPLICACION_ALGORITMO_IMAGEN.md -> docs/ALGORITMO_PROCESAMIENTO_IMAGENES.md - Actualizado: .gitignore (agregado dbschema/), env.example (schema evalImagen) - Verificado: Credenciales protegidas, no hardcodeadas en codigo

--- a/env.example
+++ b/env.example
@@ -24,8 +24,8 @@ RESEND_FROM_EMAIL=no-reply@updates.agricolaandrea.com
 # Nombre que aparece como remitente
 RESEND_FROM_NAME=Sistema de Alertas LuzSombra
 
-# Destinatarios de Alertas (JSON array) - FALLBACK si no hay contactos en image.Contacto
-# NOTA: Si hay contactos en image.Contacto, se usan esos. Esta variable solo se usa como fallback.
+# Destinatarios de Alertas (JSON array) - FALLBACK si no hay contactos en evalImagen.Contacto
+# NOTA: Si hay contactos en evalImagen.Contacto, se usan esos. Esta variable solo se usa como fallback.
 ALERTAS_EMAIL_DESTINATARIOS=["admin@example.com", "agronomo@example.com"]
 ALERTAS_EMAIL_CC=["manager@example.com"]
 # ALERTAS_EMAIL_BCC=["backup@example.com"]
@@ -34,7 +34,7 @@ ALERTAS_EMAIL_CC=["manager@example.com"]
 # Secret key para firmar tokens JWT - CAMBIAR EN PRODUCCIÓN
 JWT_SECRET=your-super-secret-key-change-in-production
 
-# NOTA: Las API Keys ahora se guardan en SQL Server (tabla image.Dispositivo)
+# NOTA: Las API Keys ahora se guardan en SQL Server (tabla evalImagen.Dispositivo)
 # Ya NO es necesario configurar VALID_API_KEYS aquí
 # Las apiKeys se gestionan desde la base de datos
 
