--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ scripts/generated/
 # Vercel (no se usa)
 .vercel/
 vercel.json
+
+# DbSchema (visualización local, no necesario en repo)
+dbschema/
