--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
     "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mssql": "^9.1.5",
