--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "piexifjs": "^1.0.6",
+    "qrcode": "^1.5.3",
     "resend": "^6.4.2"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.21",
     "@types/mssql": "^9.1.5",
     "@types/multer": "^1.4.11",
+    "@types/qrcode": "^1.5.5",
     "eslint": "^9.39.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
