--- a/env.example
+++ b/env.example
@@ -42,5 +42,11 @@ JWT_SECRET=your-super-secret-key-change-in-production
 PORT=3001
 FRONTEND_URL=http://localhost:3000
 
+# Backend Base URL (para QR Codes de activación)
+# URL base del backend (para QR Codes)
+BACKEND_BASE_URL=http://localhost:3001/api/
+# En producción usar:
+# BACKEND_BASE_URL=https://luzsombra-backend.azurewebsites.net/api/
+
 # Development
 NODE_ENV=development
