feat: implementar estructura jerÃ¡rquica de 3 niveles para sistema de alertas
- Crear estructura jerÃ¡rquica similar a 'Detalle' con 3 niveles:
  - Nivel 1: Alertas (lista de alertas con botÃ³n consolidar)
  - Nivel 2: Mensajes Consolidados por Fundo (con botÃ³n enviar)
  - Nivel 3: Mensajes Enviados (detalle de mensaje con alertas asociadas)

- Backend:
  - Nuevo endpoint GET /api/alertas/mensajes para listar mensajes consolidados
  - Nuevo endpoint GET /api/alertas/mensajes/:id para detalle de mensaje
  - Scheduler automÃ¡tico con node-cron para consolidar y enviar diariamente
  - ConfiguraciÃ³n ENABLE_ALERT_SCHEDULER para habilitar/deshabilitar

- Frontend:
  - Nuevo componente MensajesConsolidados (Nivel 2)
  - Nuevo componente MensajesEnviados (Nivel 3)
  - Modificado AlertasDashboard (Nivel 1) - solo consolidar, sin enviar
  - Nuevos mÃ©todos en api.ts: getMensajes(), getMensajeById()
  - NavegaciÃ³n jerÃ¡rquica entre niveles con AlertasNavigation
  - PestaÃ±a padre 'Sistema de Alertas' con 3 subpestaÃ±as en sidebar
  - Iconos Package y Mail agregados a Layout

- Scripts demo:
  - Scripts para consolidar y enviar alertas vÃ­a Resend API
  - GuÃ­a rÃ¡pida de envÃ­o de alertas
  - DocumentaciÃ³n completa del flujo

--- a/env.example
+++ b/env.example
@@ -50,3 +50,11 @@ BACKEND_BASE_URL=http://localhost:3001/api/
 
 # Development
 NODE_ENV=development
+
+# Alert Scheduler Configuration
+# Habilitar/deshabilitar el scheduler automático de alertas
+# true = habilitado (default), false = deshabilitado
+ENABLE_ALERT_SCHEDULER=true
+# Nota: El scheduler ejecuta:
+# - Consolidación: Diariamente a las 8:00 AM (hora de Santiago)
+# - Envío: Cada hora para procesar mensajes pendientes
