--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "canvas": "^3.2.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "piexifjs": "^1.0.6",
     "qrcode": "^1.5.3",
     "resend": "^6.4.2"
