security: eliminar todas las credenciales e informaciÃ³n hardcodeada
- Reemplazar credenciales SQL (usuario y contraseÃ±a) con placeholders
- Eliminar IPs hardcodeadas (10.1.10.4) y reemplazar con [TU_SERVIDOR_SQL]
- Reemplazar nombres de BD (BD_PACKING_AGROMIGIVA_DESA) con [TU_BASE_DE_DATOS]
- Eliminar credenciales VPN del README
- Reemplazar emails especÃ­ficos con placeholders genÃ©ricos
- Actualizar todos los scripts SQL (40+) con placeholders
- Limpiar documentaciÃ³n (docs/, scripts/, README.md)
- Mover archivos .md del root a docs/
- Actualizar .gitignore con comentarios sobre scripts/ y docs/
- Agregar logger estructurado (Winston)
- Implementar recuperaciÃ³n de contraseÃ±a vÃ­a email
- Mejoras de seguridad (Helmet, rate limiting)

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ credenciales_sql_server_agromigiva.txt
 Thumbs.db
 
 # Logs
-logs
+logs/
 *.log
 
 # Runtime data
@@ -102,7 +102,9 @@ coverage/
 # TernJS port file
 .tern-port
 
-# Scripts SQL generados automáticamente
+# Scripts y Documentación
+# NOTA: Las carpetas scripts/ y docs/ SÍ deben incluirse en el repo
+# Solo se ignoran los scripts generados automáticamente
 scripts/generated/
 
 # Python cache
@@ -123,7 +125,7 @@ HABILITAR_*.md
 INSTALACION_*.md
 
 # Scripts SQL generados automáticamente (ya está arriba, pero lo mantenemos)
-scripts/generated/
+# scripts/generated/ (duplicado removido)
 
 # Azure Publish Settings (contiene credenciales)
 *.PublishSettings.txt
