--- a/env.example
+++ b/env.example
@@ -6,10 +6,10 @@ SQL_PORT=1433
 SQL_ENCRYPT=true
 
 # SQL Server Authentication
-# Usuario para aplicación LuzSombra (DESA y PROD)
-# Usuario: ucser_luzsombra_desa (DESA) / ucser_luzSombra (PROD)
-SQL_USER=ucser_luzsombra_desa
-SQL_PASSWORD=D3s4S3r12
+# Usuario para aplicación LuzSombra
+# Contactar al administrador para obtener credenciales
+SQL_USER=your_sql_username
+SQL_PASSWORD=your_sql_password
 
 # Data Source Configuration
 # Options: 'sql' (only SQL Server)
@@ -19,8 +19,8 @@ DATA_SOURCE=sql
 # API Key de Resend (obtener desde https://resend.com/api-keys)
 RESEND_API_KEY=re_tu_api_key_aqui
 # Email desde el cual se envían las alertas (debe estar verificado en Resend)
-# Dominio: updates.agricolaandrea.com
-RESEND_FROM_EMAIL=no-reply@updates.agricolaandrea.com
+# Reemplazar con tu dominio verificado en Resend
+RESEND_FROM_EMAIL=no-reply@your-domain.com
 # Nombre que aparece como remitente
 RESEND_FROM_NAME=Sistema de Alertas LuzSombra
 
