--- a/backend/package.json
+++ b/backend/package.json
@@ -29,20 +29,25 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "googleapis": "^161.0.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "piexifjs": "^1.0.6",
     "qrcode": "^1.5.3",
-    "resend": "^6.4.2"
+    "resend": "^6.4.2",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/mssql": "^9.1.5",
     "@types/multer": "^1.4.11",
     "@types/qrcode": "^1.5.5",
