--- a/.github/workflows/deploy-backend-azure.yml
+++ b/.github/workflows/deploy-backend-azure.yml
@@ -1,14 +1,16 @@
-name: Deploy Backend to Azure App Service
+# ⚠️ DESHABILITADO: Este workflow no se usa
+# El deploy se hace mediante master_agromigiva-luzysombra.yml que despliega backend + frontend juntos
+# name: Deploy Backend to Azure App Service
 
-on:
-  push:
-    branches:
-      - master
-      - main
-    paths:
-      - 'backend/**'
-      - '.github/workflows/deploy-backend-azure.yml'
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
+#     paths:
+#       - 'backend/**'
+#       - '.github/workflows/deploy-backend-azure.yml'
+#   workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: agromigiva-luzysombra
