--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
