fix: Asegurar que vite estÃ© disponible en build frontend - usar npx y --include=dev

--- a/.github/workflows/master_agromigiva-luzysombra.yml
+++ b/.github/workflows/master_agromigiva-luzysombra.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: |
-          npm ci
+          npm ci --include=dev
           npm run build
         env:
           # No configurar VITE_API_URL - usar rutas relativas (mismo dominio)
