--- a/.github/workflows/master_agromigiva-luzysombra.yml
+++ b/.github/workflows/master_agromigiva-luzysombra.yml
@@ -71,7 +71,7 @@ jobs:
           ls -la node_modules/js-md4/ 2>/dev/null || echo "⚠️ js-md4 no encontrado"
           echo "📄 package.json:"
           cat package.json | head -15
-          echo "✅ Package listo para deployment (con node_modules)"
+          echo "✅ Package listo para deployment (con node_modules incluidos)"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
