feat: ExtracciÃ³n de lotID desde EXIF y auto-llenado de formulario - Extrae lotID desde EXIF (ImageDescription, UserComment, Artist) - Auto-llena Empresa, Fundo, Sector y Lote desde lotID - Soporte para lotes inactivos con advertencias - Nuevos endpoints: /api/burro/upload y /api/lot-info/:lotID - Limpieza de logs innecesarios en backend y frontend - Permisos dispositivos:write agregados a rol Agronomo - Mejoras en start-dev.bat para limpieza de procesos - CorrecciÃ³n de importaciÃ³n de logger en image-processing - EliminaciÃ³n de filtros statusID=1 en stored procedures y queries - Fallback de fecha desde nombre de archivo (YYYYMMDD_HHMMSS)

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,6 @@ INSTALACION_*.md
 .vercel/
 vercel.json
 
-# DbSchema (visualización local, no necesario en repo)
-dbschema/
+# Carpetas de documentación y scripts
+docs/
+scripts/
